# boxyy

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh  package-lock.json  release-please-config.json
.github/workflows/: package.yml  release-please.yml  update-brew.yml
Casks/: boxy-gui.rb
Formula/: boxy.rb
boxy-gui/: Cargo.toml  README.md  tauri.conf.json
boxy-gui/icons/: icon.icns
boxy-gui/src/: commands.rs  lib.rs  logging.rs  main.rs  managers.rs
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs  models.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs  managers.rs
crates/cli/tests/: integration_test.rs
crates/core/: Cargo.toml
crates/core/src/: executor.rs  lib.rs  manager.rs  package.rs  retry.rs
crates/error/: Cargo.toml
crates/error/src/: lib.rs
crates/managers/brew/: Cargo.toml
crates/managers/brew/src/: lib.rs
crates/managers/bun/: Cargo.toml
crates/managers/bun/src/: lib.rs
crates/managers/cargo/: Cargo.toml
crates/managers/cargo/src/: lib.rs
crates/managers/mas/: Cargo.toml
crates/managers/mas/src/: lib.rs
crates/managers/npm/: Cargo.toml
crates/managers/npm/src/: lib.rs
crates/managers/pip/: Cargo.toml
crates/managers/pip/src/: lib.rs
crates/managers/pipx/: Cargo.toml
crates/managers/pipx/src/: lib.rs
crates/managers/pnpm/: Cargo.toml
crates/managers/pnpm/src/: lib.rs
crates/managers/uv/: Cargo.toml
crates/managers/uv/src/: lib.rs
crates/managers/yarn/: Cargo.toml
crates/managers/yarn/src/: lib.rs
crates/tui/: Cargo.toml  README.md  TESTING.md
crates/tui/src/: app.rs  main.rs  managers.rs
crates/tui/src/components/: help.rs  list.rs  mod.rs  status_bar.rs  usage_bar.rs
crates/tui/src/ui/: dashboard.rs  manager.rs  mod.rs  modal.rs  package.rs
gui-frontend/: README.md  index.html  package.json  pnpm-lock.yaml
gui-frontend/src/: App.tsx  main.tsx  styles.css  theme.tsx
gui-frontend/src/hooks/: useManagers.ts  usePackages.ts  useTasks.ts
gui-frontend/src/lib/: api.ts  i18n.ts  logger.ts  mock.ts
gui-frontend/src/store/: appStore.ts  managerStore.ts  packageStore.ts  taskStore.ts
gui-frontend/src/types/: index.ts  manager.ts  package.ts  task.ts
scripts/: gui-dev.sh  quick_test.sh
scripts/ci/: package-tauri.sh  verify-artifacts.sh
