[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/core",
    "crates/cache",
    "crates/error",
    "crates/tui",
    "boxy-gui",
    "crates/managers/brew",
    "crates/managers/npm",
    "crates/managers/pnpm",
    "crates/managers/yarn",
    "crates/managers/bun",
    "crates/managers/pip",
    "crates/managers/pipx",
    "crates/managers/uv",
    "crates/managers/cargo",
    "crates/managers/mas",
]

[workspace.package]
# x-release-please-start-version
version = "1.2.1"
# x-release-please-end
edition = "2021"
authors = ["Boxy Team"]
license = "MIT OR Apache-2.0"
rust-version = "1.74"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
colored = "2.1"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
ratatui = "0.26"
crossterm = "0.27"
tauri = { version = "2.0" }
tauri-build = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
uuid = { version = "1.6", features = ["v4"] }
boxy-core = { path = "./crates/core" }
boxy-cache = { path = "./crates/cache" }
boxy-error = { path = "./crates/error" }
