[package]
name = "boxy-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
tauri.workspace = true
tauri-plugin-shell.workspace = true
tauri-plugin-opener.workspace = true
tauri-plugin-updater.workspace = true
tokio.workspace = true
uuid.workspace = true
dirs.workspace = true
boxy-core.workspace = true
boxy-cache.workspace = true
boxy-error.workspace = true
boxy-brew = { path = "../crates/managers/brew" }
boxy-bun = { path = "../crates/managers/bun" }
boxy-cargo = { path = "../crates/managers/cargo" }
boxy-mas = { path = "../crates/managers/mas" }
boxy-npm = { path = "../crates/managers/npm" }
boxy-pip = { path = "../crates/managers/pip" }
boxy-pipx = { path = "../crates/managers/pipx" }
boxy-pnpm = { path = "../crates/managers/pnpm" }
boxy-uv = { path = "../crates/managers/uv" }
boxy-yarn = { path = "../crates/managers/yarn" }

[lib]
name = "boxy_gui"
path = "src/lib.rs"

[[bin]]
name = "boxy-gui"
path = "src/main.rs"
