[package]
name = "boxy-cache"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
boxy-error = { path = "../error" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
dirs.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3.8"
