[package]
name = "boxy-npm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
boxy-core = { path = "../../core" }
boxy-error = { path = "../../error" }
boxy-cache = { path = "../../cache" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
