[package]
name = "boxy-pnpm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
boxy-core = { path = "../../core" }
boxy-error = { path = "../../error" }
boxy-cache = { path = "../../cache" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
